--- a/deckblatt1.tex
+++ b/deckblatt1.tex
@@ -4,11 +4,11 @@
 \vspace*{1.3cm}
 {\Huge Dependable Systems\\(VU 182.712)\\}
 \vspace{1.7cm}
-{\LARGE Praktisches Ubungsbeispiel SS2015:\\``Zuverl¨assigkeitsmodellierung mit \textit{sharpe}''\\}
+{\LARGE Praktisches Ubungsbeispiel SS2015:\\``Zuverlaessigkeitsmodellierung mit \textit{sharpe}''\\}
 \vspace{1.7cm}
 
 
-{\hspace{1cm} Datum der Laborübung: 18.06.2015}
+{\hspace{1cm} Datum der Laboruebung: 18.06.2015}
 
 
 \begin{table}[h!]
