Fixed Pictures, added a new one + graph data!

--- a/deckblatt1.tex
+++ b/deckblatt1.tex
@@ -18,7 +18,7 @@
 \hline
 1228774 &  Schieber Constantin \\
 \hline
-&  Pacheiner Peter \\
+1325582 &  Pacheiner Peter \\
 \hline
 1226314 & Hofer David \\
 \hline
