--- a/deckblatt1.tex
+++ b/deckblatt1.tex
@@ -13,14 +13,14 @@
 
 \begin{table}[h!]
 \centering
-\begin{tabular}{|p{3.5cm}|p{6.5cm}|}
-\hline \textbf{Matr. Nr.} & \textbf{Name} \\
+\begin{tabular}{|p{3.5cm}|p{4cm}|p{6.5cm}|}
+\hline \textbf{Matr. Nr.} & \textbf{Name} & \textbf{Email}\\
 \hline
-1228774 &  Schieber Constantin \\
+1228774 &  Schieber Constantin & Constantin.Schieber@outlook.com\\
 \hline
-1325582 &  Pacheiner Peter \\
+1325582 &  Pacheiner Peter & Peter.Pacheiner@gmail.com \\
 \hline
-1226314 & Hofer David \\
+1226314 & Hofer David & e1226314@student.tuwien.ac.at \\
 \hline
 \end{tabular}
 \end{table}
